fix(Gallery): rename stretched to stretch

--- a/packages/vkui/src/components/BaseGallery/BaseGallery.module.css
+++ b/packages/vkui/src/components/BaseGallery/BaseGallery.module.css
@@ -86,7 +86,7 @@
   opacity: 0;
 }
 
-.arrowAreaStretched {
+.arrowAreaStretch {
   inset-block-start: 0;
 }
 
